fix: button alignment

--- a/modal/modal.css
+++ b/modal/modal.css
@@ -11,6 +11,7 @@
   cursor: pointer;
   margin-bottom: 30px;
 }
+
 .header-modal {
   border-radius: 5px;
   box-shadow: #183040 1.95px 1.95px 2.6px;
@@ -21,7 +22,7 @@
 
 .header-title {
   font-size: 1.2rem;
-  font-weight: 500;
+  font-weight: var(--fw-500);
   padding: 1rem 1rem;
 }
 
@@ -30,11 +31,11 @@
   padding: 0rem 1rem;
 }
 
-.button-container{
+.button-container {
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: flex-end;
   padding: 1rem 1rem;
+  column-gap: 1rem;
 }
 
 .dialog-btn {
@@ -44,6 +45,6 @@
   box-shadow: 0 3px 1px -2px #0003, 0 2px 2px #00000024, 0 1px 5px #0000001f;
   color: var(--font);
   font-size: 0.9rem;
-  padding: 0.8rem 1.3rem;
+  padding: 0.5rem 1.3rem;
   cursor: pointer;
 }
